--- a/2025-03 ntp-clock-v0.0.1
+++ b/2025-03 ntp-clock-v0.0.1
@@ -18,7 +18,9 @@ const char* ssid = "xyz";
 const char* password = "xyz";
 
 // Set up the OLED display (Change the model and pin numbers if necessary)
-U8G2_SSD1306_128X64_NONAME_F_HW_I2C u8g2(U8G2_R0, U8X8_PIN_NONE);
+//U8G2_SSD1306_128X64_NONAME_F_HW_I2C u8g2(U8G2_R0, U8X8_PIN_NONE);
+// changed to 128x32 OLED
+U8G2_SSD1306_128X32_NONAME_F_HW_I2C u8g2(U8G2_R0, U8X8_PIN_NONE);
 
 // NTP settings
 WiFiUDP udp;
